# estrutura-de-dados

./: .gitignore  CMakeLists.txt
binary-tree/: main.c
doubly-linked-list/: doubly-linked-list.c  doubly-linked-list.h  main.c
linked-list/: liked-list.c  singly-linked-list.h
